[package]
name = "transact"
version = "0.1.0"
edition = "2021"
authors = ["Michael Shmulevich <tpetuu@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
csv = "1.1"

[[bin]]
name = "transact"
path = "src/main.rs"
